<resources>
    <string name="app_name">BuyPool !</string>
    <string name="appName">BuyPool  !</string>

    <string name="UserName">UserName</string>
    <string name="Name">Name: </string>
    <string name="PhoneNumber">Phone Number: </string>

    <string name="Login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="Password">Password</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Email">Email</string>
    <string name="ComfirmPassword">Confirm Password</string>
    <string name="ForgetPassword">Forget Password ..?</string>

    <string name="Facebook">FaceBook Login ..?</string>
    <string name="twitter">twitter Login ..?</string>
    <string name="google">google Login ..?</string>
    <string name="notification_icon">Notification</string>>
    <string name="post_page_icon_that_happy_face">Post Your page ?</string>>

    <string name="feedbackemail"> eMial</string>
    <string name="feedbacktitle"> feedbacktitle</string>
    <string name="feedbackname"> feedbackname</string>
    <string name="feedbacktype"> feedbacktype</string>

    <string name="feedbackbody"> feedbackbody</string>
    <string name="feedbackresponse"> feedbackresponse</string>

    <!--String for Profile Page-->
    <string name="Card_Collection"> Card Collection</string>
    <string name="Card_Send"> Card Send</string>
    <string name="Title"> Title</string>
    <string name="Submit"> Submit</string>

    <string name="TitleHintEnterText"> Enter Your Topic here</string>
    <string name="PhoneNumberHintEnterText">Enter Your Phone Number here</string>
    <string name="Address"> Address: </string>
    <string name="AddressHere"> Enter Your Address here</string>
    <string name="Description"> Description: </string>
    <string name="DescriptionEnter"> Please enter your description here</string>
    <string name="DesignTopContentDiscription"> Profile page top backgroup</string>
    <string name="CollectedCardContentDiscription"> Profile page move to Collected Card  </string>
    <string name="SendCardContentDiscription"> Profile page move to Send Card  </string>

    <!-- String Profile page End Here-->

    <string name="contendDiscriptionBackgruo">  background design</string>
    <string name="Task_Finished">   Task Completed</string>


</resources>
